# axum-study

./: .env
backend/: Cargo.toml
backend/migrations/: 20240621135732_init.sql
backend/src/: controller.rs  handlers.rs  lib.rs  main.rs  repositories.rs  router.rs
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/Modal/: add-form-modal.tsx  delete-todo-modal.tsx  detail-modal.tsx
frontend/src/components/Todo/: Todo.tsx
frontend/src/functions/: fetch.ts
frontend/src/types/: Todo.d.ts
