[package]
name = "axum-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version="1.38.0", features=["full"] }
dotenvy = "0.15.7"
tower-http = { version="0.5.2", features=["full"] }
hyper = { version="1.3.1", features=["full"] }
anyhow = "1.0.86"
serde = { version="1.0.203", features=["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
sqlx = { version="0.7.4", features=["sqlite", "runtime-tokio-native-tls", "chrono"] }
validator = { version="0.16", features=["derive"] }
http-body = "1.0.0"
http = "1.1.0"
